# DoesTheDogWatchPlex-GUI

./: .gitattributes  .gitignore  Dockerfile.gui  README.md  config.py.example  dtdd.py  gui.py  main.py  plex_warnings.py  pyproject.toml  requirements-gui.txt  settings.py
.forgejo/workflows/: build.yml  mirror-release.yml
.github/workflows/: docker.yml  release.yml
